aggiunti effeti transition, hover e controllata generale

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link" aria-current="page" href="#">My PlayStation<span><i class="fa-solid fa-angle-down mx-2"></i></a>
                           </li>
                         </ul> 
-                      <button class="btn_login me-3 px-3 py-2" type="submit">Accedi</button>
+                      <a href="https://my.account.sony.com/central/signin/?duid=00000007000901008b8ddd2eb79b95eb0a164726e2b38e86973dcb48266b3e91631d29c26f4d8c7c&response_type=code&client_id=e4a62faf-4b87-4fea-8565-caaabb3ac918&scope=web%3Acore&access_type=offline&state=790c30b43c844cf968e4def5991c7d55b935545917693ae6d444f13487a0aa8e&service_entity=urn%3Aservice-entity%3Apsn&ui=pr&smcid=web%3Apdc&redirect_uri=https%3A%2F%2Fweb.np.playstation.com%2Fapi%2Fsession%2Fv1%2Fsession%3Fredirect_uri%3Dhttps%253A%252F%252Fio.playstation.com%252Fcentral%252Fauth%252Flogin%253Flocale%253Dit_IT%2526postSignInURL%253Dhttps%25253A%25252F%25252Fwww.playstation.com%25252Fit-it%25252F%2526cancelURL%253Dhttps%25253A%25252F%25252Fwww.playstation.com%25252Fit-it%25252F%26x-psn-app-ver%3D%2540sie-ppr-web-session%252Fsession%252Fv5.17.2&auth_ver=v3&error=login_required&error_code=4165&error_description=User+is+not+authenticated&no_captcha=false&cid=52d368ed-5743-4a59-aafa-4c4ee0fa910e#/signin/ca?entry=ca" target="blank" class="btn_login me-3 px-3 py-2" type="submit">Accedi</a>
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                       </svg>
@@ -102,22 +102,22 @@
       <section>
         <div class="container py-5">
           <div class="row">
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
             </div>
-            <div class="col-6 col-sm-4 col-md-4 col-lg-2 pb-3">
+            <div class="col-6 col-sm-4 col-md-4 col-lg-2 my-3">
               <img class="img-fluid game" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
             </div>
           </div>
@@ -150,14 +150,14 @@
       <!-- SEZIONE CONSOLE PLAYSTATION 5  -->
       <section>
         <div class="container">
-          <div class="row d-flex align-items-center my-3">
+          <div class="row d-flex align-items-center">
             <div class="col-12 col-lg-6">
               <h1>Console PLayStation 5</h1>
               <div class="py-3 fs-4 text-secondary">Sperimenta la nuova generazione di incredibile giochi Playstation</div>
               <button class="btn_info px-3 py-2">Maggiori infomazioni</button>
             </div>
             <div class="col-12 col-lg-6">
-              <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+              <img class="img-fluid my-3" src="img/playstation-5-thumb.png" alt="">
             </div>
           </div>
         </div>
@@ -168,23 +168,23 @@
       <section>
         <div class="container p-5">
           <div class="row d-flex justify-content-center text-center">
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2 opacity">
               <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
               <div class="d-none d-lg-block">Console PS5</div>
             </div>
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2 opacity">
               <img class="img-fluid" src="img/joypad-thumb.png" alt="">
               <div class="d-none d-lg-block">Controller wireless</div>
             </div>
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2 opacity">
               <img class="img-fluid" src="img/headset-thumb.png" alt="">
               <div class="d-none d-lg-block">Cuffie wireless</div>
             </div>
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2 opacity">
               <img class="img-fluid" src="img/remote-thumb.png" alt="">
               <div class="d-none d-lg-block">Telecomando media</div>
             </div>
-            <div class="col-4 col-lg-2">
+            <div class="col-4 col-lg-2 opacity">
               <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
               <div class="d-none d-lg-block">Telecamera HD</div>
             </div>
@@ -306,7 +306,7 @@
             <div class="col-12 col-md-4 col-lg-4 my-5">
               <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
               <h1>PlayStation VR</h1>
-              <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco. Scoprili tutti.</div>
+              <div class="text-secondary py-3">Oltre 500 titoli ed esperienza di gioco.<br> Scoprili tutti.</div>
               <button class="btn_info py-2 px-3">Scopri di più</button>
             </div>
             <div class="col-12 col-md-4 col-lg-4 my-5">
@@ -391,7 +391,7 @@
           </div>
           <div class="row py-5 d-flex justify-content-center">
             <div class="col-6 col-lg-2 mb-4">
-              <img class="img-fluid" src="img/twitter.jpg" alt="">
+              <img class="img-fluid" src="img/twitter.jpg" alt=""> 
             </div>
             <div class="col-6 col-lg-2">
               <img class="img-fluid" src="img/facebook.jpg" alt="">
@@ -466,6 +466,7 @@
         </div>
       </div>
     </footer>
+    <!-- /FOOTER  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
